--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --dark-blue: #0a2640;
+  --light-blue: #0dbbfc;
+  --green: #65e4a3;
+  --light-grey: #f1f1f1;
+  --grey-blue: #8fb6d5;
+  --gray: #777777;
+  --manrope: "Manrope", serif;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", serif;
 }
